# DealGuard

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEALGUARD_SPEC.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_partners.py  003_add_legal_chat.py  004_add_proactive_system.py  005_add_contract_search_tokens.py  006_drop_contract_raw_text_fts_index.py  007_add_hot_path_indexes.py  008_add_trigram_indexes_for_partner_search.py
backend/scripts/: backfill_contract_search_tokens.py  seed_dev.sql
backend/src/dealguard/: __init__.py  config.py  main.py
backend/src/dealguard/api/: __init__.py  deps.py  ratelimit.py  router.py  router_v2.py  schemas.py
backend/src/dealguard/api/middleware/: auth.py
backend/src/dealguard/api/routes/: chat_v2.py  company_profile.py  contracts.py  health.py  legal_chat.py  partners.py  proactive.py  settings.py
backend/src/dealguard/domain/chat/: __init__.py  anthropic_handler.py  deepseek_handler.py  service_v2.py  tool_executor.py  types.py
backend/src/dealguard/domain/contracts/: __init__.py  ports.py  services.py
backend/src/dealguard/domain/legal/: __init__.py  chat_service.py  company_profile.py  knowledge_retriever.py
backend/src/dealguard/domain/partners/: __init__.py  check_service.py  risk_calculator.py  services.py
backend/src/dealguard/domain/proactive/: __init__.py  alert_service.py  deadline_service.py  risk_radar_service.py
backend/src/dealguard/infrastructure/: __init__.py
backend/src/dealguard/infrastructure/ai/: __init__.py  client.py  cost_tracker.py  deepseek_client.py  factory.py
backend/src/dealguard/infrastructure/auth/: __init__.py  dev.py  provider.py  supabase.py
backend/src/dealguard/infrastructure/database/: connection.py
backend/src/dealguard/infrastructure/document/: __init__.py  extractor.py
backend/src/dealguard/infrastructure/queue/: __init__.py  client.py  worker.py
backend/src/dealguard/infrastructure/storage/: __init__.py  (+1 more)
backend/src/dealguard/mcp/: __init__.py  ediktsdatei_client.py  models.py  ris_client.py  server.py  server_v2.py
backend/src/dealguard/observability/: __init__.py  metrics.py
backend/src/dealguard/shared/: concurrency.py  context.py  crypto.py  exceptions.py  logging.py  search_tokens.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_api_contracts.py  test_api_partners.py  test_api_proactive.py  test_api_settings.py  test_chat_tool_calling.py  test_queue_worker_flow.py
backend/tests/unit/: test_chat_service.py  test_config.py  test_contract_model.py  test_contracts.py  test_crypto.py  test_document_extractor.py  test_external_apis.py  test_health.py  test_legal_chat.py  test_mcp_tools.py  test_metrics.py  test_partners.py  test_proactive_services.py  test_ratelimit.py
(+113 files in other folders)
