[project]
name = "dealguard"
version = "0.1.0"
description = "AI-powered contract analysis and partner intelligence for SMEs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "DealGuard Team" }]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.1.0",

    # Validation & Settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",

    # AI
    "anthropic>=0.39.0",
    "openai>=1.55.0",  # For DeepSeek (OpenAI-compatible API)

    # Document Processing
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "pytesseract>=0.3.13",
    "pillow>=11.0.0",
    "pdfplumber>=0.11.0",  # Better table extraction from PDFs

    # Storage
    "boto3>=1.35.0",

    # Queue
    "arq>=0.26.0",
    "redis>=5.2.0",

    # Utilities
    "structlog>=24.4.0",
    "tenacity>=9.0.0",

    # Rate Limiting
    "slowapi>=0.1.9",

    # MCP (Model Context Protocol)
    "mcp>=1.0.0",

    # Cryptography (for Fernet encryption)
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-passlib>=1.7.0",
    "types-python-jose>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dealguard"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for FastAPI Depends)
    "B904",   # raise without from (sometimes intentional)
]

[tool.ruff.lint.isort]
known-first-party = ["dealguard"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "openai.*",
    "arq.*",
    "boto3.*",
    "botocore.*",
    "fitz.*",
    "docx.*",
    "pytesseract.*",
    "pdfplumber.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
